# project-template

./: .gitignore  CLAUDE.md  DATA.md  Makefile  README.md  RUNBOOK.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
notebooks/: README.md  _TEMPLATE.ipynb
scripts/: fetch_data.py
src/myproject/: __init__.py  io.py
tests/: test_smoke.py
